# Nutrifit-mobile

./: .commitlintrc.cjs  .copilot-instructions.md  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.yml  CHANGELOG.md  CODEOWNERS  DOCKER.md  README.md  audit_issues.md  docker-compose.yml  documentation_update_md  flutter_graphql_guide.md  md_report.txt  nutrifit_nutrition_guide.md  package-lock.json  package.json  pubspec.yaml  pytest.ini  render.yaml  test-agent.html  test_agent_auth.py  ussues.md
MCP/activity-mcp/: README.md  pyproject.toml  server.py  server_fastmcp.py  server_http.py
MCP/meal-mcp/: Dockerfile.http  README.md  pyproject.toml  server.py  server_fastmcp.py  server_http.py  test_upload_integration.md
MCP/user-mcp/: README.md  pyproject.toml  server.py  server_fastmcp.py  server_http.py
backend/: .coverage  .dockerignore  .env.example  .env.test  .env.user.template  .flake8  Dockerfile  INTEGRATION_AUTH0.md  Makefile  Makefile.test  README.md  __init__.py  app.py  cache.py  make.sh  nutrients.py  pyproject.toml  requirements.txt  schema_export.graphql  spectaql.yaml  test_fixes.sh
backend/REFACTOR/: 00_ARCHITECTURE_OVERVIEW.md  01_IMPLEMENTATION_GUIDE.md  02_DOMAIN_LAYER.md  03_APPLICATION_LAYER.md  04_INFRASTRUCTURE_LAYER.md  05_TESTING_STRATEGY.md  06_GRAPHQL_API.md  08_DEPLOYMENT.md  09_PERSISTENCE_STRATEGY.md  IMPLEMENTATION_TRACKER.md  PHASE_9_STATUS.md  README.md  RECENT_CHANGES.md  TROUBLESHOOTING.md  USER_DOMAIN_CHANGELOG.md  graphql-api-reference.md  profilo-nutrizionale.md  usermanagement.md
backend/ai_models/: meal_photo_models.py  meal_photo_prompt.py  nutrient_enrichment.py  usda_client.py
backend/api/: __init__.py  upload.py
backend/application/nutritional_profile/: __init__.py
backend/application/user/: __init__.py
backend/backend/graphql/: schema.graphql
backend/docs/: DEPENDENCIES.md  USER_DOMAIN.md  activity-domain-plan.md  ai_meal_photo.md  ai_meal_photo_metrics.md  architecture-ports-adapters.md  current-status.md  legacy-cleanup-summary.md  meal-domain-plan.md  nutrition-domain-completed.md  refactor-domain-meal-analysis.md  refactor-domain-nutrition.md  v2-domains-audit.md  v2-repository-strategy.md
backend/docs/REFACTOR/: nutritional-profile-architecture.md  persistence-layer-status.md
backend/docs/V2/: NUTRIFIT_MEAL_REFACTOR_COMPLETE.md  V2_CRITICAL_REMINDERS.md  V2_MIGRATION_STRATEGY_QUICK_GUIDE.md  V2_SERVICE_EXAMPLES_AND_BEST_PRACTICES.md
backend/docs/api/: index.html
backend/domain/: __init__.py
backend/domain/activity/: __init__.py  integration.py  repository.py
backend/domain/meal/: __init__.py  errors.py  integration.py  meal_photo_refactor.md
backend/domain/nutrition/: integration.py
backend/domain/shared/: types.py
backend/domain/user/: __init__.py
backend/graphql/: context.py  meal_resolver.py  schema.graphql  schema.py  types_activity_health.py  types_ai.py  types_meal.py  types_meal_aggregate.py  types_meal_mutations.py  types_meal_new.py  types_nutritional_profile.py  types_product.py  types_user.py
backend/graphql/resolvers/: global_queries.py
backend/graphql/utils/: datetime_helpers.py
backend/inference/: __init__.py  adapter.py  vision_client.py
backend/infrastructure/: config.py  ml_adapters.py
backend/infrastructure/cache/: __init__.py  in_memory_idempotency_cache.py
backend/infrastructure/events/: __init__.py  in_memory_bus.py
backend/infrastructure/meal/: __init__.py
backend/infrastructure/persistence/: activity_repository_factory.py  factory.py  nutritional_profile_factory.py
backend/infrastructure/scheduler/: __init__.py  scheduler_config.py  tdee_recalculation_job.py
backend/infrastructure/user/: __init__.py  auth0_provider.py  auth_middleware.py  auth_permission.py  in_memory_user_repository.py  mongo_user_repository.py  repository_factory.py
backend/metrics/: ai_meal_photo.py  core.py
backend/openfoodfacts/: adapter.py
backend/repository/: __init__.py  activities.py  ai_meal_photo.py  health_totals.py  meals.py
backend/rules/: category_profiles.py  parser.py
backend/scripts/: README.md  README_INDEXES.md  analyze_dependencies.py  check_user_env.py  deps_report.py  export_schema.py  fix_activity_events_validator.py  fix_markdown.sh  generate_changelog.py  health_check.sh  init_mongodb_atlas.py  init_user_schema.py  integration_test.sh  optimize_dependencies.sh  preflight_config.sh  recreate_activity_events.py  recreate_meals_collection.py  setup_mongodb_indexes.py  smart_update.py  test_activity_persistence.sh  test_all_domains_e2e.sh  test_auth0.sh  test_meal_persistence.sh  test_meal_workflow.sh  test_ml_workflow.sh  test_nutritional_profile_persistence.sh  test_user_e2e.sh  update_app_version_in_render.py  verify_schema_breaking.py
backend/tests/: conftest.py  conftest_nutrition_mock.py  test_activity_ingest.py  test_ai_meal_photo_gpt4v_e2e.py  test_ai_meal_photo_metrics_sentinel.py  test_ai_meal_photo_normalization.py  test_ai_meal_photo_stub.py  test_app_lifespan.py  test_basic.py  test_daily_summary.py  test_debug_image_url.py  test_dish_title_italian.py  test_e2e_usda_enrichment.py  test_end_to_end_enrichment.py  test_gpt4v_adapter_enrichment.py  test_gpt4v_adapter_parse_error.py  test_gpt4v_adapter_partial_response.py  test_gpt4v_adapter_success.py  test_gpt4v_adapter_timeout_fallback.py  test_gpt4v_adapter_transient_error_fallback.py  test_graphql_meal_photo_mutation.py  test_improved_usda_labels.py  test_inference_adapter.py  test_inference_adapter_selection.py  test_inference_repository_idempotency.py  test_integration_v3.py  test_log_meal.py  test_log_meal_idempotency.py  test_meal_analysis_service_equivalence.py  test_meal_domain_routing.py  test_meal_entries.py  test_meal_entries_image_url.py  test_meal_image_url.py  test_meal_image_url_fix.py  test_meal_photo_parse_stats.py  test_meal_photo_parser_and_adapter.py  test_metrics_ai_meal_photo.py  test_metrics_source_label.py  test_normalization_unit.py  test_nutrient_enrichment.py  (+18 more)
backend/v2/: .coverage  README.md  __init__.py  mypy.ini  pytest.ini
(+479 files in other folders)
