[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrifit-activity-mcp"
version = "1.0.0"
description = "MCP server for Nutrifit Activity & Health domain"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
